- Added mat-breadcrumb - Added xp-finder-behavior - Added xp-master-behavior - Added xp-slave-behavior - Major documentation improvements - Minor bug fixes - Moved item finding from xp-selected-behavior to xp-finder-behavior - Replaced xp-master-state with xp-master-behavior - Replaced xp-slave-state with xp-slave-behavior

--- a/xp-slave-behavior.html
+++ b/xp-slave-behavior.html
@@ -10,7 +10,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 This behavior is used to add slave capabilities on the context element for a master-slave pattern.
 
 @element xp-slave-behavior
-@description A behavior used to add slave capabilities on the context element for a master-slave pattern.
+@description A behavior used to add slave capabilities on the context element for a master-slave pattern
 @keywords web app, html5, expandjs, web-components
 @group behaviors
 @homepage http://expandjs.com/elements/xp-slave-behavior
